[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Structures/turret.png" type="Texture" id=1]
[ext_resource path="res://assets/Resources/ore.png" type="Texture" id=2]
[ext_resource path="res://src/Player Coordinates.gd" type="Script" id=3]
[ext_resource path="res://assets/Resources/Fairy Dust.png" type="Texture" id=4]
[ext_resource path="res://assets/Structures/drillupscaled.png" type="Texture" id=5]
[ext_resource path="res://assets/Resources/Fairy Swatter.png" type="Texture" id=6]
[ext_resource path="res://src/HUD.gd" type="Script" id=7]
[ext_resource path="res://assets/Resources/Lock Icon.png" type="Texture" id=8]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="Player Coordinates" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 154.0
margin_bottom = 49.0
text = "Player Coordinates:
X:	######
Y:	######"
scroll_active = false
script = ExtResource( 3 )

[node name="Border" type="ColorRect" parent="."]
margin_top = 525.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.764706, 0.556863, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drill Item" type="TextureButton" parent="."]
margin_left = 368.0
margin_top = 528.0
margin_right = 504.0
margin_bottom = 680.0
rect_scale = Vector2( 0.35, 0.35 )
toggle_mode = true
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unobtainium Cost" type="TextureRect" parent="Drill Item"]
margin_left = 14.2858
margin_top = 154.286
margin_right = 78.2858
margin_bottom = 218.286
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Number" type="RichTextLabel" parent="Drill Item/Unobtainium Cost"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 12.0
rect_scale = Vector2( 5, 5 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fairy Dust Cost" type="TextureRect" parent="Drill Item"]
margin_left = 14.2858
margin_top = 180.0
margin_right = 78.2858
margin_bottom = 244.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Number" type="RichTextLabel" parent="Drill Item/Fairy Dust Cost"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 12.0
rect_scale = Vector2( 5, 5 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turret Item" type="TextureButton" parent="."]
margin_left = 456.0
margin_top = 528.0
margin_right = 520.0
margin_bottom = 592.0
rect_scale = Vector2( 0.35, 0.35 )
toggle_mode = true
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unobtainium Cost" type="TextureRect" parent="Turret Item"]
margin_top = 154.286
margin_right = 64.0
margin_bottom = 218.286
rect_rotation = 0.298413
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Number" type="RichTextLabel" parent="Turret Item/Unobtainium Cost"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 12.0
rect_scale = Vector2( 5, 5 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fairy Dust Cost" type="TextureRect" parent="Turret Item"]
margin_top = 180.0
margin_right = 64.0
margin_bottom = 244.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Number" type="RichTextLabel" parent="Turret Item/Fairy Dust Cost"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 12.0
rect_scale = Vector2( 5, 5 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health Bar" type="ColorRect" parent="."]
margin_left = 53.0
margin_top = 533.0
margin_right = 259.0
margin_bottom = 559.0
color = Color( 0, 0, 0, 0.686275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text Label" type="RichTextLabel" parent="Health Bar"]
margin_left = -50.0
margin_top = 7.0
margin_right = -4.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 21, 6 )
text = "Health:"
scroll_active = false

[node name="Number Label" type="RichTextLabel" parent="Health Bar"]
margin_left = 211.0
margin_top = 7.0
margin_right = 275.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 21, 6 )
text = "###/100"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="ColorRect" parent="Health Bar"]
margin_left = 3.0
margin_top = 3.0
margin_right = 203.0
margin_bottom = 23.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unobtainium Display" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 568.0
margin_right = 328.0
margin_bottom = 848.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="RichTextLabel" parent="Unobtainium Display"]
margin_left = 370.0
margin_top = 80.0
margin_right = 434.0
margin_bottom = 92.0
rect_scale = Vector2( 10, 10 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fairy Dust Display" type="TextureRect" parent="."]
margin_left = 80.0001
margin_top = 568.0
margin_right = 400.0
margin_bottom = 848.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="RichTextLabel" parent="Fairy Dust Display"]
margin_left = 340.0
margin_top = 80.0
margin_right = 404.0
margin_bottom = 92.0
rect_scale = Vector2( 10, 10 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mining Display" type="TextureRect" parent="."]
margin_left = 152.0
margin_top = 568.0
margin_right = 472.0
margin_bottom = 848.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mining Time" type="RichTextLabel" parent="Mining Display"]
margin_left = 370.0
margin_top = 80.0
margin_right = 434.0
margin_bottom = 92.0
rect_scale = Vector2( 10, 10 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldown Display" type="ColorRect" parent="Mining Display"]
margin_left = 10.0
margin_top = -30.0005
margin_right = 330.0
margin_bottom = 290.0
color = Color( 0.654902, 0.654902, 0.654902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fairy Swatter" type="TextureRect" parent="."]
margin_left = 224.0
margin_top = 568.0
margin_right = 544.0
margin_bottom = 848.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fairy Swatter Lock" type="TextureButton" parent="Fairy Swatter"]
margin_right = 320.0
margin_bottom = 280.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Object" type="TextureRect" parent="Fairy Swatter"]
margin_left = 350.0
margin_top = 80.0
margin_right = 414.0
margin_bottom = 144.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cost Number" type="RichTextLabel" parent="Fairy Swatter/Cost Object"]
margin_left = 85.0
margin_right = 149.0
margin_bottom = 12.0
rect_scale = Vector2( 5, 5 )
text = "###"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="Drill Item" to="." method="_on_Drill_Item_toggled"]
[connection signal="toggled" from="Turret Item" to="." method="_on_Turret_Item_toggled"]
[connection signal="pressed" from="Fairy Swatter/Fairy Swatter Lock" to="." method="_on_Fairy_Swatter_Lock_pressed"]
